# YaClaw

./: .gitignore  CHANGELOG.md  README.md  README_ja.md  main.py  pyproject.toml  settings.json
docs/: LINE_bot_registration.md  channel_line_doc.md
docs/ja/: LINEボットの登録手順.md  channel_line_doc_ja.md
examples/: settings_codex_acp.json  settings_copilot_acp.json  settings_forward_test.json  settings_gemini_acp.json  settings_line.json  settings_minimal.json  settings_minimal_codex.json  settings_minimal_copilot.json  settings_opencode_acp.json  settings_schedule.json  settings_terminal_conversation_test.json  settings_terminal_echo_test.json
examples/historical/: settings_minimal_codex.json  settings_minimal_copilot.json  settings_minimal_gemini.json
plugins/: agent_acp.py  agent_codex_cli.py  agent_copilot_cli.py  agent_echo.py  channel_discord.py  channel_line.py  channel_random_talker.py  channel_schedule.py  channel_terminal.py
plugins/historical/: agent_codex_cli.py  agent_copilot_cli.py  agent_gemini_cli_NG.py  channel_random_talker_text_body.py  channel_schedule_text_body.py
plugins/text_body/: agent_echo_text_body.py  channel_discord_text_body.py
plugins/text_body/historical/: agent_codex_cli.py
workspace/copilot/: AGENTS.md
yaclaw/: agent.py  channel.py  log.py  message.py  util.py
