[project]
name = "yaclaw"
version = "0.9.0"
description = "Yet another minimal alternative to OpenClaw."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-client-protocol>=0.8.1",
    "apscheduler>=3.11.2",
    "discord-py>=2.6.4",
    "line-bot-sdk>=3.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
